--- a/edg-mkgridmap.conf
+++ b/edg-mkgridmap.conf
@@ -128,4 +128,6 @@ group vomss://voms.hpcc.ttu.edu:8443/voms/dream dream
 #-------------------
 #USER-VO-MAP lbne LBNE - 52 - Eileen Berman (berman@fnal.gov)
 group vomss://voms.fnal.gov:8443/voms/lbne lbne
+#USER-VO-MAP lsst LSST - 53 - Gabriele Garzoglio (garzoglio@fnal.gov)
+group vomss://voms.fnal.gov:8443/voms/lsst lsst
 
