--- a/edg-mkgridmap.conf
+++ b/edg-mkgridmap.conf
@@ -68,6 +68,7 @@ group vomss://vdvoms.vcell.uchc.edu:8443/voms/CompBioGrid compbiogrid
 #-------------------
 # USER-VO-MAP engage Engage -- 30 -- Mats Rynge (rynge@renci.org)    
 group vomss://osg-engage.renci.org:8443/voms/Engage/ engage
+group vomss://voms.grid.iu.edu:8443/voms/Engage engage
 #-------------------
 # USER-VO-MAP ilc ILC -- 31 -- Lynn Garren (garren@fnal.gov)
 group vomss://voms.fnal.gov:8443/voms/ilc ilc
@@ -128,6 +129,16 @@ group vomss://voms.hpcc.ttu.edu:8443/voms/dream dream
 #-------------------
 #USER-VO-MAP lbne LBNE - 52 - Eileen Berman (berman@fnal.gov)
 group vomss://voms.fnal.gov:8443/voms/lbne lbne
+#-------------------
 #USER-VO-MAP lsst LSST - 53 - Gabriele Garzoglio (garzoglio@fnal.gov)
 group vomss://voms.fnal.gov:8443/voms/lsst lsst
+#-------------------
+#USER-VO-MAP uc3 UC3 - 54 - Rob Gardner (rwg@uchicago.edu)
+group vomss://voms.grid.iu.edu:8443/voms/UC3 UC3
+#-------------------
+#USER-VO-MAP mcdrd MCDRD - 55 - Hans Wenzel (wenzel@fnal.gov)
+group vomss://voms.fnal.gov:8443/voms/mcdrd mcdrd
+#-------------------
+#USER-VO-MAP lqcd LQCD - 56 - James Simone (simone@fnal.gov)
+group vomss://voms.fnal.gov:8443/voms/lqcd lqcd
 
