--- a/edg-mkgridmap.conf
+++ b/edg-mkgridmap.conf
@@ -88,9 +88,6 @@ group vomss://grid-voms.desy.de:8443/voms/icecube icecube
 # USER-VO-MAP alice ALICE -- 37 -- Latchezar Betev (latchezar.betev@cern.ch)
 group vomss://voms.cern.ch:8443/voms/alice alice 
 #-------------------
-# USER-VO-MAP nebiogrid NEBioGrid -- 39 -- Peter Doherty (doherty@crystal.harvard.edu)
-group vomss://hpc.sbgrid.org:8443/voms/NEBioGrid nebiogrid
-#-------------------
 #USER-VO-MAP gluex Gluex -- 40 -- Richard Jones (richard.t.jones@uconn.edu)
 group vomss://gryphn.phys.uconn.edu:8443/voms/Gluex gluex 
 #-------------------
@@ -141,4 +138,9 @@ group vomss://voms.fnal.gov:8443/voms/mcdrd mcdrd
 #-------------------
 #USER-VO-MAP lqcd LQCD - 56 - James Simone (simone@fnal.gov)
 group vomss://voms.fnal.gov:8443/voms/lqcd lqcd
-
+#-------------------
+#USER-VO-MAP auger Auger - 57 - Jiri Chudoba (jiri.chudoba@cern.ch)
+group vomss://voms1.egee.cesnet.cz:8443/voms/auger auger
+#-------------------
+#USER-VO-MAP auger glast.org - 58 - Michael Kuss (Michael.Kuss@pi.infn.it)
+group vomss://voms2.cnaf.infn.it:8443/voms/glast.org glast.org
